auth with google

--- a/WebApiTransfer/WebApiTransfer/appsettings.json
+++ b/WebApiTransfer/WebApiTransfer/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=ep-proud-lake-ag7hg9ct-pooler.c-2.eu-central-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_uxAsSG2lDN7d; SSL Mode=VerifyFull; Channel Binding=Require;"
   },
-  "DirImageName": "images"
+  "DirImageName": "images",
+  "Jwt": {
+    "Issuer": " http://localhost:5173",
+    "Audience": " http://localhost:5173",
+    "Key": "my_super_secret_jwt_key_!12345$secure"
+  }
 }
