--- a/FrontendForTransfer/package.json
+++ b/FrontendForTransfer/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.17",
     "@tinymce/tinymce-react": "^6.3.0",
     "formik": "^2.4.9",
+    "object-to-formdata": "^4.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
