--- a/FrontendForTransfer/.env.development
+++ b/FrontendForTransfer/.env.development
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://localhost:5125
+#VITE_API_BASE_URL=http://localhost:5125
+VITE_API_BASE_URL=http://mytransfersite123.somee.com
