--- a/FrontendForTransfer/package.json
+++ b/FrontendForTransfer/package.json
@@ -15,9 +15,11 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tinymce/tinymce-react": "^6.3.0",
     "formik": "^2.4.9",
+    "jwt-decode": "^4.0.0",
     "object-to-formdata": "^4.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17",
