--- a/WebApiTransfer/WebApiTransfer/appsettings.json
+++ b/WebApiTransfer/WebApiTransfer/appsettings.json
@@ -20,5 +20,6 @@
     "Password": "spzn tzct jtqc awzh",
     "SmtpServer": "smtp.gmail.com",
     "Port": "587"
-  }
+  },
+  "ClientUrl": "http://localhost:5173"
 }
