--- a/WebApiTransfer/Core/Core.csproj
+++ b/WebApiTransfer/Core/Core.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
     
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="35.6.5" />
         <PackageReference Include="FluentValidation" Version="12.0.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
         <PackageReference Include="MailKit" Version="4.14.1" />
