--- a/WebApiTransfer/WebApiTransfer/appsettings.json
+++ b/WebApiTransfer/WebApiTransfer/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-proud-lake-ag7hg9ct-pooler.c-2.eu-central-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_uxAsSG2lDN7d; SSL Mode=VerifyFull; Channel Binding=Require;"
+    "DefaultConnection": "Host=192.168.64.3; Port=5028;  Username=halosh; Password=mimi45Wh**xaxalala;"
   },
   "DirImageName": "images",
   "Jwt": {
