--- a/FrontendForTransfer/Dockerfile
+++ b/FrontendForTransfer/Dockerfile
@@ -1,30 +1,20 @@
-# Виберіть базовий образ
-FROM node:18 AS build
-
-# Встановіть робочий каталог
+# ===== BUILD =====
+FROM node:20-alpine AS build
 WORKDIR /app
 
-# Скопіюйте package.json і package-lock.json
 COPY package*.json ./
-
-# Встановіть залежності
 RUN npm install
 
-# Скопіюйте весь код
 COPY . .
-
-# Побудуйте проект
 RUN npm run build
 
-# Виберіть образ для продакшн
+# ===== NGINX =====
 FROM nginx:alpine
-# Скопіюйте побудовані файли в каталог для сервера
-COPY --from=build /app/dist /usr/share/nginx/html
-# Скопіюйте nginx налаштування в каталог для сервера
-RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx/nginx.conf /etc/nginx/conf.d
-# Відкрийте порт для сервера
-EXPOSE 80
 
-# Запустіть Nginx
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=build /app/dist /usr/share/nginx/html
+
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
