--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     container_name: transfer_api
     volumes:
       - /data/transfer/images:/app/images
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ConnectionStrings__DefaultConnection: Host=db;Database=mydb;Port:5022;Username=ivan;Password=marko123halosh
     ports:
       - "5898:8080"
     depends_on:
@@ -26,7 +29,7 @@ services:
 
   front:
     build: 
-      context: ./FrontendForTransfer
+      context: ./my-transfer-ts
     container_name: react_front
     depends_on:
       - server
