--- a/FrontendForTransfer/Dockerfile
+++ b/FrontendForTransfer/Dockerfile
@@ -2,6 +2,10 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
+# ⬇️ ДОДАЄМО
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+
 COPY package*.json ./
 RUN npm install
 
